--- a/jan21/Sprint_1_Tasks/pom.xml
+++ b/jan21/Sprint_1_Tasks/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>Sprint_1_Tasks</artifactId>
+    <groupId>com.company</groupId>
+    <artifactId>weborders-tdd-automation-framework</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,6 +13,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
 
         <dependency>
@@ -46,6 +47,28 @@
         </dependency>
 
     </dependencies>
+
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.1.2</version>
+                    <configuration>
+                        <suiteXmlFiles>
+                            <!--suppress UnresolvedMavenProperty -->
+                            <suiteXmlFile>${xmlFile}</suiteXmlFile>
+                        </suiteXmlFiles>
+                    </configuration>
+
+
+                </plugin>
+
+            </plugins>
+        </pluginManagement>
+    </build>
 
 
 </project>
