--- a/jan21/Sprint_1_Tasks/pom.xml
+++ b/jan21/Sprint_1_Tasks/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>commons-io</artifactId>
             <version>2.13.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
