--- a/Cucumber-framework-MorgageApplication/config.properties
+++ b/Cucumber-framework-MorgageApplication/config.properties
@@ -4,3 +4,8 @@ firstname=sierra
 lastname=macdowell
 email=sierra@therevolution1.com
 password=S153456m
+
+
+db.url=jdbc:mysql://apps-database.cb72canasobc.us-east-2.rds.amazonaws.com/loan
+db.username=duotech
+db.password=duotech2023
