--- a/Cucumber-framework-MorgageApplication/.github/workflows/smoke-test-with-email-notification.yml
+++ b/Cucumber-framework-MorgageApplication/.github/workflows/smoke-test-with-email-notification.yml
@@ -40,7 +40,7 @@ jobs:
              path: target/cucumber-report/report.html
 
       - name: Send failure email
-        if: failure() # Only run this step if the workflow fails
+        if: failure() # Only run this step if the workflow fails j
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
