--- a/Cucumber-framework-MorgageApplication/config.properties
+++ b/Cucumber-framework-MorgageApplication/config.properties
@@ -1,5 +1,5 @@
 url=http://qa-duobank.us-east-2.elasticbeanstalk.com/index.php
-browser=chromeheadless
+browser=chrome
 firstname=sierra
 lastname=macdowell
 email=sierra@therevolution1.com
